tests/e2e/entity_minus3.error
Error: syntax error in story at line 1, column 4

1|    0a = 0
         ^

E0041: `=` is not allowed here
